Fixed issue with bullet numbering being cut off
Added margin-left from 20px to 30px !important to stop the bullet numbers from being cut off.

--- a/style/tsc_2013.css
+++ b/style/tsc_2013.css
@@ -1,4 +1,8 @@
 /* @group Core */
+	
+ul, ol {
+	margin-left: 30px !important;
+}
 
 /* Login Page */
 .loginpanel form a {
